# rust-server

./: .development.env  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2022-01-21-125411_create_users/: down.sql  up.sql
migrations/2022-01-25-062455_create_users/: up.sql
migrations/2022-01-25-062501_create_posts/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/databse/: db.rs
src/models/: message.rs  user.rs
src/routes/: message.rs  mod.rs  user.rs
src/routes/guards/: auth_guard.rs
tests/: user_test.rs
tests/common/: mod.rs
