[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0-beta"
rocket_contrib = { version = "0.4.10", features = ["helmet", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rand = "0.8.4"
rust-argon2 = "0.8.3"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
