[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0-beta"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
jwt = "0.15.0"
bcrypt = "0.10.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "uuid", "secrets"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dev-dependencies]
lazy_static = "1.4.0"
